Add "runOnClasspath" "runJLinked"